# vulkan-renderer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  dependencies.cmake  utils.cmake
src/: assets.cpp  assets.hpp  camera.cpp  camera.hpp  camera_controller.cpp  camera_controller.hpp  engine.cpp  engine.hpp  gui.cpp  gui.hpp  input.cpp  input.hpp  light.cpp  light.hpp  main.cpp  math.hpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  render_backend.cpp  render_backend.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  timer.cpp  timer.hpp  transform.cpp  transform.hpp
src/render_backend/: buffer.cpp  buffer.hpp  texture.cpp  texture.hpp  utils.hpp
src/shaders/: depth_only.frag.glsl  forward.frag.glsl  forward.uniforms.glsl.h  forward.vert.glsl  forward_uniforms.glsl.h  lighting.glsl.h  shadow_map.vert.glsl  shadowmap.frag.glsl  shadowmap.vert.glsl  shadowmap_uniforms.glsl.h  skybox.frag.glsl  skybox.vert.glsl  static.vert.glsl  uniforms.glsl.h  utils.glsl.h
